--- a/technology.html
+++ b/technology.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="ICVR">
         <meta property="og:site_name" content="ICVR">
-        <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 
         <title>기업가치실현연구소</title>
 
@@ -34,7 +34,7 @@
             <div class="modal_wrap contact">
                 <!-- s:modal_scroll -->
                 <div class="modal_scroll scroll s_hover">
-                    <img class="modal_close close_icon" src="/images/ico_modal_close.svg" alt="닫기">
+                    <img class="modal_close close_icon" src="./images/ico_modal_close.svg" alt="닫기">
                     <div class="first step on">
                         <h1 class="mb-3">Contact Us</h1>
                         <p>연락처를 남겨주시면 빠른 시일안에 연락드리겠습니다.</p>
@@ -81,7 +81,7 @@
                                         <div class="dropdown">
                                             <button class="selected">
                                                 전체
-                                                <img src="/images/ico_dropdown-chevron.svg" alt="드롭다운 화살표">
+                                                <img src="./images/ico_dropdown-chevron.svg" alt="드롭다운 화살표">
                                             </button>
                                             <div class="dropdown_list scroll s_hover">
                                                 <button>전체</button>
@@ -164,7 +164,7 @@
                     <div class="second step">
                         <h1 class="mb-3">Contact Us</h1>
                         <div class="wrap">
-                            <img src="/images/contact_complete.svg" alt="완료">
+                            <img src="./images/contact_complete.svg" alt="완료">
                             <p>
                                 문의가 완료되었습니다.<br>
                                 빠른 시일내로 확인하여 연락드리겠습니다
@@ -180,17 +180,17 @@
         <div class="quick_wrap visible">
             <div class="quick">
                 <a href="javascript:void(0)" class="goto_top">
-                    <img src="/images/arrow_top.svg" alt="맨 위로">
+                    <img src="./images/arrow_top.svg" alt="맨 위로">
                 </a>
             </div>
         </div>
         <div class="quick_wrap">
             <div class="quick">
                 <a href="#" class="goto_counsel">
-                    <img src="/images/ico_goto_counsel.svg" alt="상담하기 바로가기">
+                    <img src="./images/ico_goto_counsel.svg" alt="상담하기 바로가기">
                 </a>
                 <a href="#" class="goto_top">
-                    <img src="/images/arrow_top.svg" alt="맨 위로">
+                    <img src="./images/arrow_top.svg" alt="맨 위로">
                 </a>
             </div>
         </div>
@@ -198,7 +198,7 @@
             <h1 class="ir_su">기업가치실현연구소</h1>
             <div class="nav_bg"></div>
             <div class="nav_bg_mobile">
-                <img class="close" src="/images/mobile_close.svg" alt="모바일 메뉴 닫기">
+                <img class="close" src="./images/mobile_close.svg" alt="모바일 메뉴 닫기">
                 <ul class="d-flex flex-direction-column">
                     <li class="about">
                         <a href="about.html">About</a>
@@ -228,8 +228,8 @@
             </div>
             <nav class="d-flex">
                 <a href="index.html">
-                    <img class="header_logo" src="/images/logo_w.svg" alt="로고">
-                    <img class="header_logo_m" src="/images/logo_w_mobile.svg" alt="모바일 로고">
+                    <img class="header_logo" src="./images/logo_w.svg" alt="로고">
+                    <img class="header_logo_m" src="./images/logo_w_mobile.svg" alt="모바일 로고">
                 </a>
                 <ul class="menu d-flex align-items-center">
                     <li>
@@ -244,7 +244,7 @@
                 </ul>
             </nav>
             <div class="mobile_menu">
-                <img class="mobile_burger" src="/images/mobile_burger.svg" alt="모바일 버거">
+                <img class="mobile_burger" src="./images/mobile_burger.svg" alt="모바일 버거">
             </div>
         </header>
         <div class="visual">
@@ -278,7 +278,7 @@
                                 <p>비상장&#183;중소&#183;벤처기업의 지분을3% 이상 직접 매입하는 전문 서비스입니다.투자자 관점에서 안정적이고 투명한 절차로 거래를
                                     진행합니다.</p>
                             </div>
-                            <img class="img" src="/images/icon_sv01.svg" alt="서비스 아이콘">
+                            <img class="img" src="./images/icon_sv01.svg" alt="서비스 아이콘">
                         </div>
                         <div class="technology_wrap ai_crush fade-left">
                             <span>대상 주주 유형</span>
@@ -290,7 +290,7 @@
                                         - 명의신탁 주식을 안전하게 정리하려는 보유자<br>
                                         개인의 상황에 맞춘 맞춤형 매입 절차를 제공합니다.</p>
                                 </div>
-                                <img class="img" src="/images/icon_sv01.svg" alt="서비스 아이콘">
+                                <img class="img" src="./images/icon_sv01.svg" alt="서비스 아이콘">
                             </div>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                                         - 대상 기업: 비상장회사 &#183; 중소기업 &#183; 벤처기업<br>
                                         - 매입 방식: 당사가 직접 인수(Direct Acquisition)명확한 기준으로 고객의 지분 거래를 돕습니다.</p>
                                 </div>
-                                <img class="img" src="/images/icon_sv01.svg" alt="서비스 아이콘">
+                                <img class="img" src="./images/icon_sv01.svg" alt="서비스 아이콘">
                             </div>
                         </div>
                         <div class="technology_wrap zamkorea fade-left">
@@ -319,7 +319,7 @@
                                         5. 계약 체결 및 정산<br>
                                         모든 과정은 법률 자문을 중심으로 안전하게 진행됩니다.</p>
                                 </div>
-                                <img class="img" src="/images/icon_sv01.svg" alt="서비스 아이콘">
+                                <img class="img" src="./images/icon_sv01.svg" alt="서비스 아이콘">
                             </div>
                         </div>
                     </div>
@@ -329,7 +329,7 @@
 
         <footer class="section fp-auto-height">
             <div class="inner">
-                <img src="/images/logo_w.svg" alt="로고">
+                <img src="./images/logo_w.svg" alt="로고">
                 <address>
                     <dl>
                         <dt>대표</dt>
@@ -352,8 +352,8 @@
 
         <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
-        <script src="/js/layout.js"></script>
-        <script src="/js/sub.js"></script>
+        <script src="./js/layout.js"></script>
+        <script src="./js/sub.js"></script>
 
         <script>
             // -- 순차적으로 visible 클래스 추가
