--- a/about.html
+++ b/about.html
@@ -10,23 +10,23 @@
 
         <title>기업가치실현연구소</title>
 
-        <link rel="stylesheet" href="/css/base.css">
-        <link rel="stylesheet" href="/css/reset.css">
-        <link rel="stylesheet" href="/css/typography.css">
+        <link rel="stylesheet" href="./css/base.css">
+        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./css/typography.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link
             rel="preconnect"
             href="https://fonts.gstatic.com"
             crossorigin="crossorigin">
         <link
-            href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+            href="https://fonts.googleapis.com./css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
             rel="stylesheet">
         <!-- swiper slide -->
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
 
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
@@ -350,8 +350,8 @@
 
         <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
-        <script src="/js/layout.js"></script>
-        <script src="/js/sub.js"></script>
+        <script src="./js/layout.js"></script>
+        <script src="./js/sub.js"></script>
         <script>
             function openFormPopup() {
                 const url = "https://docs.google.com/forms/d/e/1FAIpQLScbNu9psLIgwm8Hwib1Prptkbtsr007vqIeK2" +
