--- a/index.html
+++ b/index.html
@@ -7,34 +7,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="ICVR">
         <meta property="og:site_name" content="ICVR">
-        <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"> 
+        <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon"> 
 
         <title>기업가치실현연구소</title>
 
-        <link rel="stylesheet" href="/css/base.css">
-        <link rel="stylesheet" href="/css/reset.css">
-        <link rel="stylesheet" href="/css/typography.css">
+        <link rel="stylesheet" href="../css/base.css">
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/typography.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link
             rel="preconnect"
             href="https://fonts.gstatic.com"
             crossorigin="crossorigin">
         <link
-            href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+            href="https://fonts.googleapis.com./css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
             rel="stylesheet">
         <!-- swiper slide -->
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
 
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
         <div class="quick_wrap">
             <div class="quick">
                 <a href="javascript:void(0)" class="goto_top">
-                    <img src="/images/arrow_top.svg" alt="맨 위로">
+                    <img src="./images/arrow_top.svg" alt="맨 위로">
                 </a>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <h1 class="ir_su">기업가치실현연구소</h1>
             <div class="nav_bg"></div>
             <div class="nav_bg_mobile">
-                <img class="close" src="/images/mobile_close.svg" alt="모바일 메뉴 닫기">
+                <img class="close" src="./images/mobile_close.svg" alt="모바일 메뉴 닫기">
                 <ul class="d-flex flex-direction-column">
                     <li class="about">
                         <a href="about.html">About</a>
@@ -73,8 +73,8 @@
             </div>
             <nav class="d-flex">
                 <a href="index.html">
-                    <img class="header_logo" src="/images/logo_w.svg" alt="로고">
-                    <img class="header_logo_m" src="/images/logo_w_mobile.svg" alt="모바일 로고">
+                    <img class="header_logo" src="./images/logo_w.svg" alt="로고">
+                    <img class="header_logo_m" src="./images/logo_w_mobile.svg" alt="모바일 로고">
                 </a>
                 <ul class="menu d-flex align-items-center">
                     <li>
@@ -89,7 +89,7 @@
                 </ul>
             </nav>
             <div class="mobile_menu">
-                <img class="mobile_burger" src="/images/mobile_burger.svg" alt="모바일 버거">
+                <img class="mobile_burger" src="./images/mobile_burger.svg" alt="모바일 버거">
             </div>
         </header>
         <!-- s:main section -->
@@ -168,7 +168,7 @@
                             </div>
                             <div class="img_w one">
                                 <div class="img_bg">
-                                    <img src="/images/img_target01.jpg" alt="">
+                                    <img src="./images/img_target01.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                             </div>
                             <div class="img_w one">
                                 <div class="img_bg">
-                                    <img src="/images/img_target02.jpg" alt="">
+                                    <img src="./images/img_target02.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                             </div>
                             <div class="img_w one">
                                 <div class="img_bg">
-                                    <img src="/images/img_target03.jpg" alt="">
+                                    <img src="./images/img_target03.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -218,7 +218,7 @@
             <div class="swiper-wrapper">
                 <div class="m_tech_w swiper-slide">
                     <div class="d-flex contents_w">
-                        <img src="/images/img_target01.jpg" alt="추천 컨텐츠01">
+                        <img src="./images/img_target01.jpg" alt="추천 컨텐츠01">
                         <div class="txt_cont">
                             <h6>비상장회사 주식 매도 희망자</h6>
                             <p>비상장회사 주식을 처분하고 싶지만<br>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="m_tech_w swiper-slide">
                     <div class="d-flex contents_w">
-                        <img src="/images/img_target02.jpg" alt="추천 컨텐츠02">
+                        <img src="./images/img_target02.jpg" alt="추천 컨텐츠02">
                         <div class="txt_cont">
                             <h6>경영권 분쟁 상황의 지분 정리</h6>
                             <p>공동창업자 간의 갈등이나<br>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="m_tech_w swiper-slide">
                     <div class="d-flex contents_w">
-                        <img src="/images/img_target03.jpg" alt="추천 컨텐츠03">
+                        <img src="./images/img_target03.jpg" alt="추천 컨텐츠03">
                         <div class="txt_cont">
                             <h6>명의신탁 주식의 정리</h6>
                             <p>명의신탁 상태의 비상장주식을 매각하거나 정리하고자 하는 경우<br>
@@ -251,10 +251,10 @@
             </div>
             <ul class="navigation">
                 <li class="app-button prev">
-                    <img src="/images/ico_news_prev.svg" alt="이전">
+                    <img src="./images/ico_news_prev.svg" alt="이전">
                 </li>
                 <li class="app-button next">
-                    <img src="/images/ico_news_next.svg" alt="다음">
+                    <img src="./images/ico_news_next.svg" alt="다음">
                 </li>
             </ul>
         </section>
@@ -272,19 +272,19 @@
                     <div class="info_wrap d-flex justify-content-between">
                         <div>
                             <div class="img_wrap">
-                                <img src="/images/img_info01.jpg" alt="안내 이미지 01">
+                                <img src="./images/img_info01.jpg" alt="안내 이미지 01">
                             </div>
                             <p>법률 자문</p>
                         </div>
                         <div>
                             <div class="img_wrap">
-                                <img src="/images/img_info02.jpg" alt="안내 이미지 01">
+                                <img src="./images/img_info02.jpg" alt="안내 이미지 01">
                             </div>
                             <p>안전한 절차</p>
                         </div>
                         <div>
                             <div class="img_wrap">
-                                <img src="/images/img_info03.jpg" alt="안내 이미지 01">
+                                <img src="./images/img_info03.jpg" alt="안내 이미지 01">
                             </div>
                             <p>신뢰 기반 매입</p>
                         </div>
@@ -306,25 +306,25 @@
                     <ul class="application_list">
                         <li class="application_item fade-left">
                             <div>
-                                <img src="/images/img_recommend01.jpg" alt="추천 이미지 01">
+                                <img src="./images/img_recommend01.jpg" alt="추천 이미지 01">
                                 <p>비상장회사 주식을 팔고 싶은 주주</p>
                             </div>
                         </li>
                         <li class="application_item fade-left">
                             <div>
-                                <img src="/images/img_recommend02.jpg" alt="추천 이미지 02">
+                                <img src="./images/img_recommend02.jpg" alt="추천 이미지 02">
                                 <p>공동창업자 간 갈등 등으로 지분 정리가 필요한 경영진</p>
                             </div>
                         </li>
                         <li class="application_item fade-left">
                             <div>
-                                <img src="/images/img_recommend03.jpg" alt="추천 이미지 03">
+                                <img src="./images/img_recommend03.jpg" alt="추천 이미지 03">
                                 <p>비상장 주식을 명의신탁으로 보유하고 있어 정리해야 하는 분</p>
                             </div>
                         </li>
                         <li class="application_item fade-left">
                             <div>
-                                <img src="/images/img_recommend04.jpg" alt="추천 이미지 04">
+                                <img src="./images/img_recommend04.jpg" alt="추천 이미지 04">
                                 <p>비상장&#183;중소&#183;벤처기업 지분을 3% 이상 매각하고 싶은 주주</p>
                             </div>
                         </li>
@@ -341,25 +341,25 @@
             <!-- s:swiper-wrapper -->
             <div class="swiper-wrapper">
                 <div class="m_application_w swiper-slide">
-                    <img src="/images/img_recommend01.jpg" alt="추천 이미지 01">
+                    <img src="./images/img_recommend01.jpg" alt="추천 이미지 01">
                     <div class="txt_cont">
                         <p>비상장회사 주식을 팔고 싶은 주주</p>
                     </div>
                 </div>
                 <div class="m_application_w swiper-slide">
-                    <img src="/images/img_recommend02.jpg" alt="추천 이미지 03">
+                    <img src="./images/img_recommend02.jpg" alt="추천 이미지 03">
                     <div class="txt_cont">
                         <p>공동창업자 간 갈등 등으로 지분 정리가 필요한 경영진</p>
                     </div>
                 </div>
                 <div class="m_application_w swiper-slide">
-                    <img src="/images/img_recommend03.jpg" alt="추천 이미지 03">
+                    <img src="./images/img_recommend03.jpg" alt="추천 이미지 03">
                     <div class="txt_cont">
                         <p>비상장 주식을 명의신탁으로 보유하고 있어 정리해야 하는 분</p>
                     </div>
                 </div>
                 <div class="m_application_w swiper-slide">
-                    <img src="/images/img_recommend04.jpg" alt="추천 이미지 04">
+                    <img src="./images/img_recommend04.jpg" alt="추천 이미지 04">
                     <div class="txt_cont">
                         <p>비상장&#183;중소&#183;벤처기업 지분을 3% 이상 매각하고 싶은 주주</p>
                     </div>
@@ -368,10 +368,10 @@
             <!-- e:swiper-wrapper -->
             <ul class="navigation">
                 <li class="app-button prev">
-                    <img src="/images/ico_news_prev.svg" alt="이전">
+                    <img src="./images/ico_news_prev.svg" alt="이전">
                 </li>
                 <li class="app-button next">
-                    <img src="/images/ico_news_next.svg" alt="다음">
+                    <img src="./images/ico_news_next.svg" alt="다음">
                 </li>
             </ul>
         </section>
@@ -387,7 +387,7 @@
                     <button class="btn_contact">문의하기</button>
                 </div>
                 <div class="right">
-                    <img src="/images/img_contact_us.jpg">
+                    <img src="./images/img_contact_us.jpg">
                 </div>
             </div>
         </section>
@@ -395,7 +395,7 @@
 
         <footer class="section fp-auto-height">
             <div class="inner">
-                <img src="/images/logo_w.svg" alt="로고">
+                <img src="./images/logo_w.svg" alt="로고">
                 <address>
                     <dl>
                         <dt>대표</dt>
@@ -422,8 +422,8 @@
         <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
         <script src='https://unpkg.com/gsap@3/dist/gsap.min.js'></script>
         <script src='https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js'></script>
-        <script src="/js/main.js"></script>
-        <script src="/js/layout.js"></script>
+        <script src="./js/main.js"></script>
+        <script src="./js/layout.js"></script>
 
         <script>
             // 메인비디오 천천히 나타내기
