--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="ICVR">
         <meta property="og:site_name" content="ICVR">
-        <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon"> 
+        <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon"> 
 
         <title>기업가치실현연구소</title>
 
-        <link rel="stylesheet" href="../css/base.css">
-        <link rel="stylesheet" href="../css/reset.css">
-        <link rel="stylesheet" href="../css/typography.css">
+        <link rel="stylesheet" href="./css/base.css">
+        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./css/typography.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link
             rel="preconnect"
@@ -27,7 +27,7 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
 
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
