--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="ICVR">
         <meta property="og:site_name" content="ICVR">
-        <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 
         <title>기업가치실현연구소</title>
 
