--- a/index.html
+++ b/index.html
@@ -384,7 +384,8 @@
                     <h1>지분 매입 상담 신청</h1>
                     <p>비상장&#183;중소&#183;벤처기업의 지분 매각을 원하신다면<br>
                         아래 양식을 통해 상담을 요청해주세요.</p>
-                    <button class="btn_contact">문의하기</button>
+                    <button class="btn_contact" onclick="openFormPopup()">문의하기</button>
+                    
                 </div>
                 <div class="right">
                     <img src="./images/img_contact_us.jpg">
