--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 loop="loop"
                 muted="muted"
                 playsinline="playsinline">
-                <source src="/videos/main_b.mp4" type="video/mp4">
+                <source src="../videos/main_b.mp4" type="video/mp4">
             </video>
             <div class="inner">
                 <div class="copytxt fade-up">
@@ -144,7 +144,7 @@
                     loop="loop"
                     muted="muted"
                     playsinline="playsinline">
-                    <source src="/videos/second_section.mp4" type="video/mp4">
+                    <source src="./videos/second_section.mp4" type="video/mp4">
                 </video>
                 <!-- e:img_box -->
             </div>
