--- a/index.html
+++ b/index.html
@@ -434,8 +434,7 @@
             });
 
             function openFormPopup() {
-                const url = "https://docs.google.com/forms/d/e/1FAIpQLScbNu9psLIgwm8Hwib1Prptkbtsr007vqIeK2" +
-                        "dYPFL5SS7WCA/viewform?usp=dialog";
+                const url = "https://docs.google.com/forms/d/e/1FAIpQLSc1SRYtP7hs7RQD-p9AYQYgEto-n3mofliXMZXeKPCWwqj0Dw/viewform";
                 const popupOptions = "width=600,height=800,top=100,left=200,resizable=yes,scrollbars=yes";
 
                 window.open(url, "googleFormPopup", popupOptions);
